--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@vercel/node": "^5.1.16",
+    "form-data": "^4.0.2",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.488.0",
+    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^12.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
@@ -23,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/mailgun-js": "^0.22.18",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
